--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -221,8 +221,8 @@ jobs:
             mv $osx ${osx/Weekly/$time}
             cent="VAPOR3-$version-CentOS7-Weekly.sh"
             mv $cent ${cent/Weekly/$time}
-            win="VAPOR3-$version-win64.exe"
-            mv $win ${win/win64/win64-$time}
+            #win="VAPOR3-$version-win64.exe"
+            #mv $win ${win/win64/win64-$time}
             brew install ghr
             endl=$'\n'
             e="sha 256"$endl
@@ -235,9 +235,10 @@ jobs:
             h="OSX:       "
             sha=`shasum -a 256 VAPOR3*Darwin*`
             h=$h$sha$endl
-            i=$'Windows10: `shasum -a 256 VAPOR3*win64*`\n'
+            #i=$'Windows10: `shasum -a 256 VAPOR3*win64*`\n'
             releaseMessage="\"Installers are timestamped as %d_%m_%y-%H:%M, and are built on commit "${hash}"\""
-            shaMessage="$e$f$g$h$i"
+            #shaMessage="$e$f$g$h$i"
+            shaMessage="$e$f$g$h"
             echo $shaMessage > "/tmp/workspace/installers/sha256_for_"${time}
             echo ghr -b "Installers are timestamped as %d_%m_%y-%H:%M, and are built on commit "${hash}"" -t ${GITHUB_TOKEN} -u ${CIRCLE_PROJECT_USERNAME} -r ${CIRCLE_PROJECT_REPONAME} -prerelease -c ${CIRCLE_SHA1} -recreate -c ${hash} -n ${tag} ${tag} /tmp/workspace/installers
             ghr -b "Installers are timestamped as %d_%m_%y-%H:%M, and are built on commit "${hash}"" -t ${GITHUB_TOKEN} -u ${CIRCLE_PROJECT_USERNAME} -r ${CIRCLE_PROJECT_REPONAME} -prerelease -c ${CIRCLE_SHA1} -recreate -c ${hash} -n ${tag} ${tag} /tmp/workspace/installers
@@ -249,10 +250,10 @@ workflows:
       - build_ubuntu18_installer
       - build_centos7_installer
       - build_osx_installer
-      - build_win10_installer
+      #- build_win10_installer
       - release_preInstallers:
           requires:
             - build_ubuntu18_installer
             - build_centos7_installer
             - build_osx_installer
-            - build_win10_installer
+            #- build_win10_installer
