--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -189,7 +189,7 @@ jobs:
             f="Ubuntu18:  `shasum -a 256 VAPOR3*Ubuntu*`"
             g="CentOS:    `shasum -a 256 VAPOR3*CentOS7*`"
             h="OSX:       `shasum -a 256 VAPOR3*Darwin*`"
-            #i="Windows10: `shasum -a 256 VAPOR3*win64*`"
+            i="Windows10: `shasum -a 256 VAPOR3*win64*`"
             message="$a$b$c$d$e$f$g$h"
             echo $message
             ghr -b "${message}" -t ${GITHUB_TOKEN} -u ${CIRCLE_PROJECT_USERNAME} -r ${CIRCLE_PROJECT_REPONAME} -prerelease -c ${CIRCLE_SHA1} -recreate 3.4preRelease /tmp/workspace/installers
@@ -221,8 +221,8 @@ jobs:
             mv $osx ${osx/Weekly/$time}
             cent="VAPOR3-$version-CentOS7-Weekly.sh"
             mv $cent ${cent/Weekly/$time}
-            #win="VAPOR3-$version-win64.exe"
-            #mv $win ${win/win64/win64-$time}
+            win="VAPOR3-$version-win64.exe"
+            mv $win ${win/win64/win64-$time}
             brew install ghr
             endl=$'\n'
             e="sha 256"$endl
@@ -237,8 +237,7 @@ jobs:
             h=$h$sha$endl
             #i=$'Windows10: `shasum -a 256 VAPOR3*win64*`\n'
             releaseMessage="\"Installers are timestamped as %d_%m_%y-%H:%M, and are built on commit "${hash}"\""
-            #shaMessage="$e$f$g$h$i"
-            shaMessage="$e$f$g$h"
+            shaMessage="$e$f$g$h$i"
             echo $shaMessage > "/tmp/workspace/installers/sha256_for_"${time}
             echo ghr -b "Installers are timestamped as %d_%m_%y-%H:%M, and are built on commit "${hash}"" -t ${GITHUB_TOKEN} -u ${CIRCLE_PROJECT_USERNAME} -r ${CIRCLE_PROJECT_REPONAME} -prerelease -c ${CIRCLE_SHA1} -recreate -c ${hash} -n ${tag} ${tag} /tmp/workspace/installers
             ghr -b "Installers are timestamped as %d_%m_%y-%H:%M, and are built on commit "${hash}"" -t ${GITHUB_TOKEN} -u ${CIRCLE_PROJECT_USERNAME} -r ${CIRCLE_PROJECT_REPONAME} -prerelease -c ${CIRCLE_SHA1} -recreate -c ${hash} -n ${tag} ${tag} /tmp/workspace/installers
