--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -246,13 +246,13 @@ jobs:
 workflows:
   installers:
     jobs:
-      - build_ubuntu18_installer
-      - build_centos7_installer
+      #- build_ubuntu18_installer
+      #- build_centos7_installer
       - build_osx_installer
-      - build_win10_installer
+      #- build_win10_installer
       - release_preInstallers:
           requires:
-            - build_ubuntu18_installer
-            - build_centos7_installer
+            #- build_ubuntu18_installer
+            #- build_centos7_installer
             - build_osx_installer
-            - build_win10_installer
+            #- build_win10_installer
