--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -100,7 +100,7 @@ jobs:
             cp site_files/site.NCAR site.local
             mkdir build
             cd build
-            /usr/local/bin/cmake -DCPACK_BINARY_DRAGNDROP=ON -DCMAKE_BUILD_TYPE:String=Release -DDIST_INSTALLER:string=ON -DCMAKE_CXX_COMPILER=/usr/local/opt/llvm/bin/clang++ -DCMAKE_C_COMPILER=/usr/local/opt/llvm/bin/clang -DCMAKE_CXX_FLAGS=-I/usr/local/opt/llvm/include -DCMAKE_EXE_LINKER_FLAGS=-L/usr/local/opt/llvm/lib -DUSE_OMP=ON ..
+            /usr/local/bin/cmake -DCPACK_BINARY_DRAGNDROP=ON -DCMAKE_BUILD_TYPE:String=Release -DDIST_INSTALLER:string=ON -DCMAKE_CXX_COMPILER=/opt/local/bin/clang++ -DCMAKE_C_COMPILER=/opt/local/bin/clang -DCMAKE_CXX_FLAGS=-I/opt/local/libexec/llvm-12/include -DCMAKE_EXE_LINKER_FLAGS=-L/opt/local/libexec/llvm-12/lib -DUSE_OMP=ON ..
             make
             make installer
             for f in VAPOR3-*.dmg ; do mv "$f" "${f/Darwin/Darwin-Weekly}" ; done
@@ -246,13 +246,13 @@ jobs:
 workflows:
   installers:
     jobs:
-      #- build_ubuntu18_installer
-      #- build_centos7_installer
+      - build_ubuntu18_installer
+      - build_centos7_installer
       - build_osx_installer
-      #- build_win10_installer
+      - build_win10_installer
       - release_preInstallers:
           requires:
-            #- build_ubuntu18_installer
-            #- build_centos7_installer
+            - build_ubuntu18_installer
+            - build_centos7_installer
             - build_osx_installer
-            #- build_win10_installer
+            - build_win10_installer
