--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -100,7 +100,11 @@ jobs:
             cp site_files/site.NCAR site.local
             mkdir build
             cd build
-            /usr/local/bin/cmake -DCPACK_BINARY_DRAGNDROP=ON -DCMAKE_BUILD_TYPE:String=Release -DDIST_INSTALLER:string=ON -DCMAKE_CXX_COMPILER=/opt/local/bin/clang++ -DUSE_OMP=ON ..
+            export PATH=/opt/local/bin:$PATH
+            sudo port select --set clang mp-clang-12
+            #/usr/local/bin/cmake -DCPACK_BINARY_DRAGNDROP=ON -DCMAKE_BUILD_TYPE:String=Release -DDIST_INSTALLER:string=ON -DCMAKE_CXX_COMPILER=/opt/local/bin/clang++ -DUSE_OMP=ON ..
+            #/usr/local/bin/cmake -DCPACK_BINARY_DRAGNDROP=ON -DCMAKE_BUILD_TYPE:String=Release -DDIST_INSTALLER:string=ON -DCMAKE_CXX_COMPILER=/opt/local/bin/clang++ -DCMAKE_C_COMPILER=/opt/local/bin/clang -DUSE_OMP=ON ..
+            cmake -DCPACK_BINARY_DRAGNDROP=ON -DCMAKE_BUILD_TYPE:String=Release -DDIST_INSTALLER:string=ON -DCMAKE_CXX_COMPILER=clang++ -DCMAKE_C_COMPILER=clang -DUSE_OMP=ON ..
             make
             make installer
             for f in VAPOR3-*.dmg ; do mv "$f" "${f/Darwin/Darwin-Weekly}" ; done
