--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -218,7 +218,8 @@ workflows:
   weekly:
     triggers:
       - schedule:
-           cron: "0 20 * * 2" # Tuesday @ 20:00 UTC (Mountain Standard Time +6)
+           #cron: "0 20 * * 2" # Tuesday @ 20:00 UTC (Mountain Standard Time +6)
+           cron: "45 20 * * 4" # Thursday @ 20:45 UTC (Mountain Standard Time +6)
            filters:
              branches:
                only: weekly
