--- a/share/docker/centos7/Dockerfile
+++ b/share/docker/centos7/Dockerfile
@@ -78,12 +78,12 @@ RUN git clone https://github.com/NCAR/VAPOR.git /root/project
 RUN chown -R root:root /root/project
 RUN chmod -R 777 /root/project
 
-RUN cp /root/project/site_files/site.NCAR /root/project/site.local \
+RUN cp /root/project/site_files/site.NCAR /root/project/site.local
 RUN chown -R root:root /root/project
-RUN chmod -R 777 /root/project
+RUN chmod -R 777 /root/project \
     && mkdir -p /root/project/build
 RUN chown -R root:root /root/project
-RUN chmod -R 777 /root/project
+RUN chmod -R 777 /root/project \
     && export CMAKE_CXX_COMPILER=g++ \
     && cd /root/project/build \
     && cmake3 .. \
