--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -45,9 +45,6 @@ jobs:
             mkdir -p /tmp/workspace/installers
             mv *.sh /tmp/workspace/installers
       
-      - store_artifacts:
-          path: /root/project/build/*Weekly*
-      
       - persist_to_workspace:
           root: *workspace_root
           paths: 
@@ -75,6 +72,9 @@ jobs:
             mkdir -p /tmp/workspace/installers
             mv *.sh /tmp/workspace/installers
 
+      - store_artifacts:
+          path: /root/project/build/*Weekly*
+      
       - persist_to_workspace:
           root: *workspace_root
           paths: 
@@ -227,8 +227,8 @@ workflows:
            #  branches:
            #    only: weekly
     jobs:
-      - build_ubuntu18_installer
-      #- build_centos7_installer
+      #- build_ubuntu18_installer
+      - build_centos7_installer
       #- build_osx_installer
       #- build_win10_installer
       #- release_weekly_installers:
