annoying circleCI GID/UID bug

--- a/share/docker/centos7/Dockerfile
+++ b/share/docker/centos7/Dockerfile
@@ -89,4 +89,7 @@ RUN chmod -R 777 /root/project \
     && cmake3 .. \
     && make && pwd && ls && ls bin
 
+RUN chown -R root:root /root
+RUN chmod -R 777 /root
+
 WORKDIR /root/project
