--- a/share/docker/centos7/Dockerfile
+++ b/share/docker/centos7/Dockerfile
@@ -59,7 +59,9 @@ RUN fileid="1S9DwySMnQrBuUUZGKolD__WQrjTmLgyn" \
     && curl -c ./cookie -s -L "https://drive.google.com/uc?export=download&id=${fileid}" > /dev/null \
     && curl -Lb ./cookie \
     "https://drive.google.com/uc?export=download&confirm=`awk '/download/ {print $NF}' ./cookie`&id=${fileid}" \
-    -o ${filename}
+    -o ${filename} \
+    && chown -R root:root /usr/local/VAPOR-Deps/2019-Aug-CentOS.tar.xz \
+    && chmod -R 777 /usr/local/VAPOR-Deps/2019-Aug-CentOS.tar.xz
 
 RUN ls -lrth /usr/local/VAPOR-Deps/
 
@@ -69,7 +71,7 @@ RUN chown -R root:root /usr/local/VAPOR-Deps/2019-Aug-CentOS.tar.xz
 RUN chmod -R 777 /usr/local/VAPOR-Deps/2019-Aug-CentOS.tar.xz
 
 RUN bsdtar -xf /usr/local/VAPOR-Deps/2019-Aug-CentOS.tar.xz -C /usr/local/VAPOR-Deps
-RUN rm /usr/local/VAPOR-Deps/2019-Aug-CentOS.tar.xz
+#RUN rm /usr/local/VAPOR-Deps/2019-Aug-CentOS.tar.xz
 
 RUN chown -R root:root /usr/local/VAPOR-Deps
 RUN chmod -R 777 /usr/local/VAPOR-Deps
