--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -45,6 +45,9 @@ jobs:
             mkdir -p /tmp/workspace/installers
             mv *.sh /tmp/workspace/installers
       
+      - store_artifacts:
+          path: /tmp/workspace/installers
+
       - persist_to_workspace:
           root: *workspace_root
           paths: 
@@ -72,8 +75,8 @@ jobs:
             mkdir -p /tmp/workspace/installers
             mv *.sh /tmp/workspace/installers
 
-      #- store_artifacts:
-      #    path: /root/project/build/*Weekly*
+      - store_artifacts:
+          path: /tmp/workspace/installers
       
       - persist_to_workspace:
           root: *workspace_root
@@ -119,7 +122,7 @@ jobs:
           no_output_timeout: 30m
 
       - store_artifacts:
-          path: /root/project/build/*Weekly*
+          path: /tmp/workspace/installers
       
       - persist_to_workspace:
           root: *workspace_root
@@ -172,6 +175,9 @@ jobs:
             mkdir -p C:\Users\circleci\project\tmp\workspace\installers
             Copy-Item C:\Users\circleci\project\build\*.exe -Destination C:\Users\circleci\project\tmp\workspace\installers
           no_output_timeout: 45m
+
+      - store_artifacts:
+          path: C:\Users\circleci\project\tmp\workspace\installers
 
       - persist_to_workspace:
           root: *workspace_root
@@ -230,10 +236,10 @@ workflows:
            #  branches:
            #    only: weekly
     jobs:
-      #- build_ubuntu18_installer
+      - build_ubuntu18_installer
       #- build_centos7_installer
       - build_osx_installer
-      #- build_win10_installer
+      - build_win10_installer
       #- release_weekly_installers:
       #    requires:
       #      - build_ubuntu18_installer
