--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -239,7 +239,7 @@ workflows:
     jobs:
       #- build_ubuntu18_installer
       - build_centos7_installer
-      - build_osx_installer
+      #- build_osx_installer
       - build_win10_installer
       #- release_weekly_installers:
       #    requires:
