--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -156,7 +156,6 @@ jobs:
             git pull --no-commit 
             git commit --allow-empty -m "Merge"
             git reset --hard origin/main
-            git checkout brokenWindows3
           shell: bash.exe
       - run:
           name: dos2unix
@@ -237,9 +236,9 @@ workflows:
            #  branches:
            #    only: weekly
     jobs:
-      #- build_ubuntu18_installer
+      - build_ubuntu18_installer
       - build_centos7_installer
-      #- build_osx_installer
+      - build_osx_installer
       - build_win10_installer
       #- release_weekly_installers:
       #    requires:
