new weekly build

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -240,9 +240,9 @@ workflows:
       - build_centos7_installer
       - build_osx_installer
       - build_win10_installer
-      #- release_weekly_installers:
-      #    requires:
-      #      - build_ubuntu18_installer
-      #      - build_centos7_installer
-      #      - build_osx_installer
-      #      - build_win10_installer
+      - release_weekly_installers:
+          requires:
+            - build_ubuntu18_installer
+            - build_centos7_installer
+            - build_osx_installer
+            - build_win10_installer
