re-enable weekly builds

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -228,21 +228,21 @@ jobs:
 workflows:
   version: 2
   weekly:
-    #triggers:
-      #- schedule:
+    triggers:
+      - schedule:
            #cron: "0 20 * * 2" # Tuesday @ 20:00 UTC (Mountain Standard Time +6)
-           #cron: "45 20 * * 4" # Thursday @ 20:45 UTC (Mountain Standard Time +6)
-           #filters:
-           #  branches:
-           #    only: weekly
+           cron: "45 20 * * 4" # Thursday @ 20:45 UTC (Mountain Standard Time +6)
+           filters:
+             branches:
+               only: weekly
     jobs:
-     # - build_ubuntu18_installer
+      - build_ubuntu18_installer
       - build_centos7_installer
-     # - build_osx_installer
-     # - build_win10_installer
-     # - release_weekly_installers:
-     #     requires:
-     #       - build_ubuntu18_installer
-     #       - build_centos7_installer
-     #       - build_osx_installer
-     #       - build_win10_installer
+      - build_osx_installer
+      - build_win10_installer
+      - release_weekly_installers:
+          requires:
+            - build_ubuntu18_installer
+            - build_centos7_installer
+            - build_osx_installer
+            - build_win10_installer
