--- a/share/docker/ubuntu18/Dockerfile
+++ b/share/docker/ubuntu18/Dockerfile
@@ -6,6 +6,7 @@ from ubuntu:18.04
 #                               #
 #################################
 
+
 RUN apt-get update \
     && apt-get install -y curl \
     && apt-get install -y xz-utils \
@@ -24,43 +25,32 @@ RUN apt-get update \
 
 # Acquire 3rd party libraries
 #
-RUN mkdir -p /usr/local/VAPOR-Deps
-RUN fileid="1v0AwfOnDsf8hMzBqg4OcEtcEyH5YpnIn" \
+RUN mkdir -p /usr/local/VAPOR-Deps \
+    && fileid="1elB8v-UNMzkNmnsJPtxk3cI1zBelJ3Hd" \
     && filename="/usr/local/VAPOR-Deps/2019-Aug-Ubuntu.tar.xz" \
     && curl -c ./cookie -s -L "https://drive.google.com/uc?export=download&id=${fileid}" > /dev/null \
-    && curl -Lb ./cookie \
-    "https://drive.google.com/uc?export=download&confirm=`awk '/download/ {print $NF}' ./cookie`&id=${fileid}" \
-    -o ${filename}
-RUN chmod -R 777 /usr
-RUN chown -R root:root /usr
-RUN tar -xf /usr/local/VAPOR-Deps/2019-Aug-Ubuntu.tar.xz \ 
-    -C /usr/local/VAPOR-Deps \
+    && curl -Lb ./cookie "https://drive.google.com/uc?export=download&confirm=`awk '/download/ {print $NF}' ./cookie`&id=${fileid}" -o ${filename} \
+    && tar -xf /usr/local/VAPOR-Deps/2019-Aug-Ubuntu.tar.xz -C /usr/local/VAPOR-Deps \
     && chown -R root:root /usr
-RUN chmod -R 777 /usr
 
 #RUN ls -lrth /usr/local/VAPOR-Deps/2019-Aug
 
 # Acquire smokeTest data
 #
-RUN mkdir -p /smokeTestData
-RUN fileid="1w8CLOohQuVrhcDbmIyU68whvqaoiCx9t" \
+RUN mkdir -p /smokeTestData \
+    && fileid="1w8CLOohQuVrhcDbmIyU68whvqaoiCx9t" \
     && filename="/tmp/smokeTestData.tar.gz" \
     && curl -c ./cookie -s -L "https://drive.google.com/uc?export=download&id=${fileid}" > /dev/null \
-    && curl -Lb ./cookie \
-    "https://drive.google.com/uc?export=download&confirm=`awk '/download/ {print $NF}' ./cookie`&id=${fileid}" \
-    -o ${filename}
-RUN tar -xf /tmp/smokeTestData.tar.gz \ 
-    -C /smokeTestData \
+    && curl -Lb ./cookie "https://drive.google.com/uc?export=download&confirm=`awk '/download/ {print $NF}' ./cookie`&id=${fileid}" -o ${filename} \
+    && tar -xf /tmp/smokeTestData.tar.gz -C /smokeTestData \
     && chown -R root:root /smokeTestData
-RUN chmod -R 777 /smokeTestData
 
 RUN cd / \
     && git clone https://github.com/NCAR/VAPOR.git /root/project \
     && cd /root/project \
     && cp site_files/site.NCAR site.local \
-    && mkdir build
-
-RUN cd /root/project/build \
+    && mkdir build \
+    && cd /root/project/build \
     && export CMAKE_CXX_COMPILER=g++ \
     && cmake .. && make
 
