--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -391,6 +391,7 @@ jobs:
 
       - run:
           name: Get third party libraries
+          command: |
             pip3 install gdown
             sudo mkdir -p /usr/local/VAPOR-Deps
             sudo chmod 777 /usr/local/VAPOR-Deps
@@ -402,10 +403,12 @@ jobs:
       
       - run:
           name: Get cmake 
+          command: |
             brew install cmake
 
       - run:
           name: Get MacPorts
+          command: |
             curl -k -O https://distfiles.macports.org/MacPorts/MacPorts-2.7.1.tar.bz2
             tar xf MacPorts-2.7.1.tar.bz2
             cd MacPorts-2.7.1/
@@ -415,6 +418,7 @@ jobs:
 
       - run:
           name: Get clang12
+          command: |
             (sudo yes || true) | sudo /opt/local/bin/port install clang-12
             sudo /opt/local/bin/port select --set clang mp-clang-12
 
