--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -419,6 +419,7 @@ jobs:
       - run:
           name: Get clang12
           command: |
+            sudo /opt/local/bin/port selfupdate
             (sudo yes || true) | sudo /opt/local/bin/port install clang-12
             sudo /opt/local/bin/port select --set clang mp-clang-12
 
