--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -367,7 +367,7 @@ jobs:
 
   build_osx_installer:
     macos:
-      xcode: "12.4.0"
+      xcode: "13.2.0"
     steps:
       - run:
           name: Make VAPOR-Deps
@@ -430,9 +430,11 @@ jobs:
             mkdir build
             cd build
             git pull
-            git checkout $CIRCLE_BRANCH
+            #git checkout $CIRCLE_BRANCH
+            git checkout main
+            git reset --hard origin/main
             export PATH=/opt/local/bin:$PATH
-            sudo port select --set clang mp-clang-12
+            #sudo port select --set clang mp-clang-12
             cmake -DCPACK_BINARY_DRAGNDROP=ON -DCMAKE_BUILD_TYPE:String=Release -DDIST_INSTALLER:string=ON -DCMAKE_CXX_COMPILER=clang++ -DCMAKE_C_COMPILER=clang -DUSE_OMP=ON ..
             make
             make installer
