--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -367,7 +367,7 @@ jobs:
 
   build_osx_installer:
     macos:
-      xcode: "12.4.0"
+      xcode: "13.2.0"
     steps:
       - run:
           name: Make VAPOR-Deps
@@ -406,22 +406,22 @@ jobs:
           command: |
             brew install cmake
 
-      - run:
-          name: Get MacPorts
-          command: |
-            curl -k -O https://distfiles.macports.org/MacPorts/MacPorts-2.7.1.tar.bz2
-            tar xf MacPorts-2.7.1.tar.bz2
-            cd MacPorts-2.7.1/
-            ./configure
-            make
-            sudo make install
+      #- run:
+      #    name: Get MacPorts
+      #    command: |
+      #      curl -k -O https://distfiles.macports.org/MacPorts/MacPorts-2.7.1.tar.bz2
+      #      tar xf MacPorts-2.7.1.tar.bz2
+      #      cd MacPorts-2.7.1/
+      #      ./configure
+      #      make
+      #      sudo make install
 
-      - run:
-          name: Get clang12
-          command: |
-            sudo /opt/local/bin/port selfupdate
-            (sudo yes || true) | sudo /opt/local/bin/port install clang-12
-            sudo /opt/local/bin/port select --set clang mp-clang-12
+      #- run:
+      #    name: Get clang12
+      #    command: |
+      #      sudo /opt/local/bin/port selfupdate
+      #      (sudo yes || true) | sudo /opt/local/bin/port install clang-12
+      #      sudo /opt/local/bin/port select --set clang mp-clang-12
 
       - run:
           name: make VAPOR
