--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -429,6 +429,7 @@ jobs:
             cp site_files/site.NCAR site.local
             mkdir build
             cd build
+            git branch --set-upstream-to=origin/main main 
             git pull
             git reset --hard origin/main
             export PATH=/opt/local/bin:$PATH
