--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -298,73 +298,6 @@ jobs:
           paths: 
             - installers
 
-  build_osx:
-    macos:
-      xcode: "12.4.0"
-    steps:
-      - run:
-          name: Make VAPOR-Deps
-          command: |
-            sudo mkdir -p /usr/local/VAPOR-Deps
-            sudo chmod -R 777 /usr/local/VAPOR-Deps
-            sudo chown -R `whoami` /usr/local/VAPOR-Deps
-            
-      #- restore_cache:
-      #    key: osxDeps-v5-{{ .Environment.CIRCLE_PROJECT_REPONAME }}
-
-      - checkout
-
-      - run:
-          name: Get dependencies 
-          command: |
-            export DEPS=/usr/local/VAPOR-Deps/2019-Aug-Darwin.tar.xz
-            if [ ! -f $DEPS ]; then
-                ~/project/.circleci/getOSXDeps.sh
-                #pip3 install gdown
-                #sudo mkdir -p /usr/local/VAPOR-Deps
-                #sudo chmod 777 /usr/local/VAPOR-Deps
-                #cd /usr/local/VAPOR-Deps
-                #gdown https://drive.google.com/uc?id=1kyDAzmK9zShrIcoAbned8YW9vn2j7lpe
-                #cd /usr/local/VAPOR-Deps
-                #tar xf 2019-Aug-Darwin.tar.xz -C /usr/local/VAPOR-Deps
-                #ls /usr/local/VAPOR-Deps
-            fi
-
-      #- run:
-      #    name: Install cmake
-      #    command: |
-      #      brew install cmake
-
-      - run:
-          name: make VAPOR
-          command: |
-            cp site_files/site.NCAR site.local
-            mkdir build
-            cd build
-            /usr/local/bin/cmake ..
-            make -j7 &> /tmp/output.txt
-
-      #- save_cache:
-      #    key: osxDeps-v5-{{ .Environment.CIRCLE_PROJECT_REPONAME }}
-      #    paths: 
-      #      - /VAPOR
-      #      - /usr/local/VAPOR-Deps
-      #      - /usr/local/lib/python3.7/site-packages/gdown
-      #      - /usr/local/bin/cmake
-      #      - /usr/local/Cellar/cmake
-
-      - store_artifacts:
-          path: /tmp/output.txt
-
-      - run:
-          name: check for warnings
-          command: |
-            if grep -q warning /tmp/output.txt; then
-               exit 1
-            else
-               exit 0
-            fi
-
   build_osx_installer:
     macos:
       xcode: "13.2.0"
@@ -376,18 +309,12 @@ jobs:
             sudo chmod -R 777 /usr/local/VAPOR-Deps
             sudo chown -R `whoami` /usr/local/VAPOR-Deps
 
-      #- restore_cache:
-      #    key: osxDeps-v5-{{ .Environment.CIRCLE_PROJECT_REPONAME }}
+      - restore_cache:
+          keys: 
+            - clang12-{{ .Environment.CIRCLE_SHA1 }}
+            - libomp-{{ .Environment.CIRCLE_SHA1 }}
 
       - checkout
-
-      #- run:
-      #    name: Get dependencies 
-      #    command: |
-      #      export DEPS=/usr/local/VAPOR-Deps/2019-Aug-Darwin.tar.xz
-      #      if [ ! -f $DEPS ]; then
-      #          ~/project/.circleci/getOSXDeps.sh
-      #      fi
 
       - run:
           name: Get third party libraries
@@ -416,12 +343,27 @@ jobs:
             make
             sudo make install
 
-      #- run:
-      #    name: Get clang12
-      #    command: |
-      #      sudo /opt/local/bin/port selfupdate
-      #      (sudo yes || true) | sudo /opt/local/bin/port install clang-12
-      #      sudo /opt/local/bin/port select --set clang mp-clang-12
+      - run:
+          name: Get libomp 
+          command: |
+            sudo /opt/local/bin/port selfupdate
+            (sudo yes || true) | sudo /opt/local/bin/port install libomp
+
+      - save_cache:
+          key: libomp-{{ .Environment.CIRCLE_SHA1 }}
+          paths:
+            - /opt/local
+
+      - run:
+          name: Get clang12
+          command: |
+            (sudo yes || true) | sudo /opt/local/bin/port install clang-12
+            sudo /opt/local/bin/port select --set clang mp-clang-12
+
+      - save_cache:
+          key: clang12-{{ .Environment.CIRCLE_SHA1 }}
+          paths:
+            - /opt/local
 
       - run:
           name: make VAPOR
@@ -429,8 +371,6 @@ jobs:
             cp site_files/site.NCAR site.local
             mkdir build
             cd build
-            git pull
-            #git checkout $CIRCLE_BRANCH
             git checkout main
             git reset --hard origin/main
             export PATH=/opt/local/bin:$PATH
