--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -53,6 +53,99 @@ jobs:
           path: C:\Users\circleci\project\tmp\installers
 
   build_osx_installer:
+    macos:
+      xcode: "13.2.0"
+    steps:
+      - run:
+          name: Make VAPOR-Deps
+          command: |
+            sudo mkdir -p /usr/local/VAPOR-Deps
+            sudo chmod -R 777 /usr/local/VAPOR-Deps
+            sudo chown -R `whoami` /usr/local/VAPOR-Deps
+
+      - restore_cache:
+          keys:
+            - clang12-{{ .Environment.CIRCLE_SHA1 }}
+            - libomp-{{ .Environment.CIRCLE_SHA1 }}
+
+      - checkout
+
+      - run:
+          name: Get third party libraries
+          command: |
+            pip3 install gdown
+            sudo mkdir -p /usr/local/VAPOR-Deps
+            sudo chmod 777 /usr/local/VAPOR-Deps
+            cd /usr/local/VAPOR-Deps
+            gdown https://drive.google.com/uc?id=1Q-IXlP_OgZSXsWKmT-smyrW9xnR-dUfg
+            cd /usr/local/VAPOR-Deps
+            tar xf 2019-Aug-Darwin.tar.xz -C /usr/local/VAPOR-Deps
+            chmod -R 777 /usr/local/VAPOR-Deps
+
+      - run:
+          name: Get cmake
+          command: |
+            brew install cmake
+
+      - run:
+          name: Get MacPorts
+          command: |
+            curl -k -O https://distfiles.macports.org/MacPorts/MacPorts-2.7.1.tar.bz2
+            tar xf MacPorts-2.7.1.tar.bz2
+            cd MacPorts-2.7.1/
+            ./configure
+            make
+            sudo make install
+
+      - run:
+          name: Get libomp
+          command: |
+            sudo /opt/local/bin/port selfupdate
+            (sudo yes || true) | sudo /opt/local/bin/port install libomp
+
+      - save_cache:
+          key: libomp-{{ .Environment.CIRCLE_SHA1 }}
+          paths:
+            - /opt/local
+
+      - run:
+          name: Get clang12
+          command: |
+            (sudo yes || true) | sudo /opt/local/bin/port install clang-12
+            sudo /opt/local/bin/port select --set clang mp-clang-12
+
+      - save_cache:
+          key: clang12-{{ .Environment.CIRCLE_SHA1 }}
+          paths:
+            - /opt/local
+
+      - run:
+          name: make VAPOR
+          command: |
+            cp site_files/site.NCAR site.local
+            mkdir build
+            cd build
+            git branch --set-upstream-to=origin/main main
+            git checkout main
+            git reset --hard origin/main
+            export PATH=/opt/local/bin:$PATH
+            sudo port select --set clang mp-clang-12
+            cmake -DCPACK_BINARY_DRAGNDROP=ON -DCMAKE_BUILD_TYPE:String=Release -DDIST_INSTALLER:string=ON -DCMAKE_CXX_COM
+            make
+            make installer
+            mkdir -p /tmp/workspace/installers
+            mv *.dmg /tmp/workspace/installers
+          no_output_timeout: 30m
+
+      - store_artifacts:
+          path: /tmp/workspace/installers
+
+      - persist_to_workspace:
+          root: *workspace_root
+          paths:
+            - installers
+
+  build_osx_installer_preDec2021:
       macos:
         xcode: "12.4.0"
       steps:
