--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -125,9 +125,10 @@ jobs:
             cp site_files/site.NCAR site.local
             mkdir build
             cd build
-            git branch --set-upstream-to=origin/main main
-            git checkout main
-            git reset --hard origin/main
+            #git branch --set-upstream-to=origin/main main
+            #git checkout main
+            #git reset --hard origin/main
+            git checkout $CIRCLE_BRANCH
             export PATH=/opt/local/bin:$PATH
             sudo port select --set clang mp-clang-12
             cmake -DCPACK_BINARY_DRAGNDROP=ON -DCMAKE_BUILD_TYPE:String=Release -DDIST_INSTALLER:string=ON -DCMAKE_CXX_COM
