--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -278,7 +278,7 @@ workflows:
     triggers:
       - schedule:
            #cron: "0 20 * * 2" # Tuesday @ 20:00 UTC (Mountain Standard Time +6)
-           cron: "40 22 * * 3" # Thursday @ 20:45 UTC (Mountain Standard Time +6)
+           cron: "15 12 * * 3"
            filters:
              branches:
                only: weekly
