--- a/apps/vaporgui/CMakeLists.txt
+++ b/apps/vaporgui/CMakeLists.txt
@@ -337,7 +337,7 @@ set (UIS
 
 source_group (UIs FILES ${UIS})
 
-find_package(Qt5 REQUIRED COMPONENTS Core OpenGL Widgets Gui DBus Network)
+find_package(Qt6 REQUIRED COMPONENTS Core OpenGL OpenGLWidgets Widgets Gui DBus Network)
 
 set (CMAKE_AUTOUIC ON) # This needs to appear before adding sources to work properly
 set (CMAKE_AUTOMOC ON)
@@ -372,7 +372,7 @@ endif()
 
 target_link_libraries (
         vapor common vdc wasp render params jpeg ${GLEW} 
-        ${TIFF_LIB} geotiff ${ASSIMP_LIB} Qt5::Widgets Qt5::OpenGL Qt5::Core Qt5::Gui Qt5::DBus Qt5::Network
+        ${TIFF_LIB} geotiff ${ASSIMP_LIB} Qt6::Widgets Qt6::OpenGL Qt6::OpenGLWidgets Qt6::Core Qt6::Gui Qt6::DBus Qt6::Network
         ${PYTHON_LIB}
 )
 
