Add linux installer command

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -396,6 +396,13 @@ if (UNIX AND NOT APPLE)
 				)
 		endif ()
 
+		file (GLOB_RECURSE HDF5_PLUGINS "${THIRD_PARTY_LIB_DIR}/hdf/*.so")
+		message(STATUS "HDF5_PLUGINS ${HDF5_PLUGINS}")
+			install (
+				FILES ${HDF5_PLUGINS}
+				DESTINATION ${INSTALL_LIB_DIR}
+				COMPONENT Dependencies
+				)
 
 	endif (DIST_INSTALLER AND GENERATE_FULL_INSTALLER)
 endif (UNIX AND NOT APPLE)
